# starting_repo

./: Cargo.toml  README.md  gen_asm.sh
asm/: add.txt  bench_iai_add.txt  iai_add.txt  main.txt
benches/: bench_crit.rs  bench_iai.rs  crit.rs  iai.rs
src/: lib.rs  main.rs
